--- a/lab2/templates/index.html
+++ b/lab2/templates/index.html
@@ -1,19 +1,56 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Lab 2</title>
+{% extends "base.html" %}
+{% block title %}Predictions{% endblock %}
 
-    <!-- Styles -->
-    <link href="{{ url_for('static', filename='./css/index.css') }}" rel="stylesheet">
-</head>
-<body>
-<h1>Prediction:</h1>
+{% block content %}
+<h1>Predict Real Estate Price</h1>
+<!--
+# features = ['BEDS', 'BATHS', 'SQFT', 'AGE', 'LOTSIZE', 'GARAGE']
+samplePredict = [[4, 2.5, 3005, 15, 17903.0, 1]]
+-->
+<form action="" method="post" role="form">
+  <div class="form-row">
+    <div class="form-group col-md-2">
+      <label for="inputBeds">Beds</label>
+      <input type="text" class="form-control" id="inputBeds" value="{{f.beds}}">
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputBaths">Baths</label>
+      <input type="text" class="form-control" id="inputBaths" value="{{f.baths}}">
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputSqft">Sqft</label>
+      <input type="text" class="form-control" id="inputSqft" value="{{f.sqft}}">
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputAge">Age</label>
+      <input type="text" class="form-control" id="inputAge" value="{{f.age}}">
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputLotsize">Lotsize</label>
+      <input type="text" class="form-control" id="inputLotsize" value="{{f.lotsize}}">
+    </div>
+    <div class="form-group col-md-2">
+      <label for="inputGarage">Garage</label>
+      <input type="text" class="form-control" id="inputGarage" value="{{f.garage}}">
+    </div>
+  </div>
+</form>
+<!-- choose model -->
+<div class="input-group">
+  <div class="input-group-prepend">
+    <div class="input-group-text">Model</div>
+  </div>
+  <select class="custom-select" id="inputGroupSelect04">
+    <option selected>Choose Model...</option>
+    {% for m in models %}
+    <option value="{{m.id}}">{{m.name}}</option>
+    {% endfor %}
+  </select>
+  <div class="input-group-append">
+    <button class="btn btn-outline-secondary" type="button">Predict</button>
+  </div>
+</div>
 {% for p in predictions %}
   <h2>{{p.model}}: {{p.prediction}}</h2>
 {% endfor %}
-</body>
-</html>
+{% endblock %}
