--- a/lab2/templates/index.html
+++ b/lab2/templates/index.html
@@ -7,50 +7,44 @@
 # features = ['BEDS', 'BATHS', 'SQFT', 'AGE', 'LOTSIZE', 'GARAGE']
 samplePredict = [[4, 2.5, 3005, 15, 17903.0, 1]]
 -->
-<form action="" method="post" role="form">
+<form action="/" method="POST" role="form">
   <div class="form-row">
+    <!-- Inputs -->
     <div class="form-group col-md-2">
-      <label for="inputBeds">Beds</label>
-      <input type="text" class="form-control" id="inputBeds" value="{{f.beds}}">
+      <label for="beds">Beds</label>
+      <input type="number" min="0" class="form-control" id="beds" name="beds" value="{{f.beds}}">
     </div>
     <div class="form-group col-md-2">
-      <label for="inputBaths">Baths</label>
-      <input type="text" class="form-control" id="inputBaths" value="{{f.baths}}">
+      <label for="baths">Baths</label>
+      <input type="number" min="0" step="0.25" class="form-control" id="baths" name="baths" value="{{f.baths}}">
     </div>
     <div class="form-group col-md-2">
-      <label for="inputSqft">Sqft</label>
-      <input type="text" class="form-control" id="inputSqft" value="{{f.sqft}}">
+      <label for="sqft">Sqft</label>
+      <input type="number" min="0" step="0.01" class="form-control" id="sqft" name="sqft" value="{{f.sqft}}">
     </div>
     <div class="form-group col-md-2">
-      <label for="inputAge">Age</label>
-      <input type="text" class="form-control" id="inputAge" value="{{f.age}}">
+      <label for="age">Age</label>
+      <input type="number" min="0" step="0.01" class="form-control" id="age" name="age" value="{{f.age}}">
     </div>
     <div class="form-group col-md-2">
-      <label for="inputLotsize">Lotsize</label>
-      <input type="text" class="form-control" id="inputLotsize" value="{{f.lotsize}}">
+      <label for="lotsize">Lotsize</label>
+      <input type="number" min="0" step="0.01" class="form-control" id="lotsize" name="lotsize" value="{{f.lotsize}}">
     </div>
     <div class="form-group col-md-2">
-      <label for="inputGarage">Garage</label>
-      <input type="text" class="form-control" id="inputGarage" value="{{f.garage}}">
+      <label for="garage">Garage</label>
+      <input type="number" min="0" class="form-control" id="garage" name="garage" value="{{f.garage}}">
     </div>
+  </div>
+  <!-- choose model -->
+  <div class="form-group row">
+    <label for="model" class="col-sm-2 col-form-label">Choose Model:</label>
+    <select class="custom-select col-sm-6" id="model" name="model">
+      {% for m in models %}
+      <option selected={{m.id == prediction.id}} value="{{m.id}}">{{m.name}}</option>
+      {% endfor %}
+    </select>
+    <button class="btn btn-success col-sm-2" type="submit">Predict</button>
   </div>
 </form>
-<!-- choose model -->
-<div class="input-group">
-  <div class="input-group-prepend">
-    <div class="input-group-text">Model</div>
-  </div>
-  <select class="custom-select" id="inputGroupSelect04">
-    <option selected>Choose Model...</option>
-    {% for m in models %}
-    <option value="{{m.id}}">{{m.name}}</option>
-    {% endfor %}
-  </select>
-  <div class="input-group-append">
-    <button class="btn btn-outline-secondary" type="button">Predict</button>
-  </div>
-</div>
-{% for p in predictions %}
-  <h2>{{p.model}}: {{p.prediction}}</h2>
-{% endfor %}
+<h3 class="mt-5">Prediction for {{prediction.name}}: {{prediction.value}}</h3>
 {% endblock %}
