--- a/templates/base.html
+++ b/templates/base.html
@@ -4,12 +4,13 @@
   <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate" /> 
   <meta http-equiv="Pragma" content="no-cache" /> 
   <meta http-equiv="Expires" content="0" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="{{ url_for('static', filename='./css/index.css') }}" >
   <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
-  <div class="mx-auto" style="width: 800px;">
+  <div class="mx-auto p-3" style="width: 800px;">
   {% block content %}
   {% endblock %}
   </div>
