--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,41 @@
 {% block title %}Users{% endblock %}
 
 {% block content %}
-<h1>Users</h1>
+<h1>{{users|count}} Users</h1>
+<div class="d-inline-flex mt-3">
+  <!-- Add User Route -->
+  <a class="btn btn-primary"
+     href="{{ url_for('addUser') }}"
+     role="button">
+     <i class="fas fa-user-plus"></i>
+     Add User
+  </a>
+ <!-- Generate Users Route links -->
+ <div class="dropdown">
+  <button class="btn btn-secondary dropdown-toggle"
+         type="button"
+         id="dropdownMenuButton"
+         data-toggle="dropdown"
+         aria-haspopup="true"
+         aria-expanded="false">
+   <i class="fas fa-users"></i>
+   Generate Users
+  </button>
+  <div class="dropdown-menu"
+      aria-labelledby="dropdownMenuButton">
+   <a class="dropdown-item"
+      href="{{ url_for('randomGenerateUsers', count=1) }}">
+       Generate 1 user
+  </a>
+   {%for i in range(2, 26)%}
+   <a class="dropdown-item"
+      href="{{ url_for('randomGenerateUsers', count=i) }}">
+       Generate {{i}} users
+   </a>
+   {% endfor %}
+  </div>
+</div>
+</div>
 <table class="table table-striped">
   <thead>
     <tr>
@@ -32,76 +66,4 @@
 {% endfor %}
 </tbody>
 </table>
-
-<div class="d-inline-flex mt-3">
-  <!-- Add User Route -->
-  <a class="btn btn-primary"
-     href="{{ url_for('addUser') }}"
-     role="button">Add User
-  </a>
-  <!-- Update User Route links -->
-  <div class="dropdown">
-   <button class="btn btn-secondary dropdown-toggle"
-          type="button"
-          id="dropdownMenuButton"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false">
-    Update User
-   </button>
-   <div class="dropdown-menu"
-       aria-labelledby="dropdownMenuButton">
-    {% for user in users %}
-    <a class="dropdown-item"
-       href="{{ url_for('updateUser', user_id=user.user_id) }}">
-        Update {{user.user_id}}
-    </a>
-    {% endfor %}
-   </div>
- </div>
-  <!-- Delete User Route links -->
-  <div class="dropdown">
-   <button class="btn btn-secondary dropdown-toggle"
-          type="button"
-          id="dropdownMenuButton"
-          data-toggle="dropdown"
-          aria-haspopup="true"
-          aria-expanded="false">
-    Delete User
-   </button>
-   <div class="dropdown-menu"
-       aria-labelledby="dropdownMenuButton">
-    {% for user in users %}
-    <a class="dropdown-item"
-       href="{{ url_for('removeUserFromUrl', user_id=user.user_id) }}">
-        Delete {{user.user_id}}
-    </a>
-    {% endfor %}
-   </div>
- </div>
- <!-- Generate Users Route links -->
- <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle"
-         type="button"
-         id="dropdownMenuButton"
-         data-toggle="dropdown"
-         aria-haspopup="true"
-         aria-expanded="false">
-   Generate Users
-  </button>
-  <div class="dropdown-menu"
-      aria-labelledby="dropdownMenuButton">
-   <a class="dropdown-item"
-      href="{{ url_for('randomGenerateUsers', count=1) }}">
-       Generate 1 user
-  </a>
-   {%for i in range(2, 200)%}
-   <a class="dropdown-item"
-      href="{{ url_for('randomGenerateUsers', count=i) }}">
-       Generate {{i}} users
-   </a>
-   {% endfor %}
-  </div>
-</div>
-</div>
 {% endblock %}
