--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,3 +1,17 @@
 h1 {
     color: rgba(0, 0, 64, 1);
 }
+
+.user-form > div {
+  padding: .2em;
+}
+
+#submit {
+  width:200px;
+  margin-top: 20px;
+}
+
+#age, #first_name {
+  margin-left: 20px;
+  display: block;
+}
