--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
   <meta http-equiv="Expires" content="0" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-  <link rel="stylesheet" href="{{ url_for('static', filename='./css/index.css') }}" >
+  <link rel="stylesheet" href="{{ url_for('static', filename='/css/index.css') }}" >
   <title>{% block title %}{% endblock %}</title>
 </head>
 <body>
