--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,7 @@
 <h1>{{users|count}} Users</h1>
 <div class="d-inline-flex mt-3">
   <!-- Add User Route -->
-  <a class="btn btn-primary"
+  <a class="btn btn-primary m-2"
      href="{{ url_for('addUser') }}"
      role="button">
      <i class="fas fa-user-plus"></i>
@@ -13,7 +13,7 @@
   </a>
  <!-- Generate Users Route links -->
  <div class="dropdown">
-  <button class="btn btn-secondary dropdown-toggle"
+  <button class="btn btn-primary dropdown-toggle m-2"
          type="button"
          id="dropdownMenuButton"
          data-toggle="dropdown"
