HW4-lab5 fuller description

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="description" content="Register to the Post comment">
+    <meta name="description" content="Register with the community and start posting comments to share your thoughts.">
     <meta name="keywords" content="post, comment, community, share">
     <meta name="author" content="CSCIS-14a">
     <meta name="viewport"
