H4-lab4 title SEO optimizations

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,9 @@
 {% extends "layout.html" %}
 
+{% block title %}
+    <title>Welcome to the home of the comment posting community</title>
+{% endblock %}
+
 {% block styles %}
 {% endblock %}
 
@@ -8,13 +12,15 @@
 
 {% block content %}
 
+   <h1>Welcome to the comment posting community</h1>
+
     {% if session_username is defined %}
 
-        <h1>Hi, {{ session_username }} !</h1>
+        <h2>Hi, {{ session_username }} !</h2>
 
     {% else %}
 
-        <h1>Hi, guest!</h1>
+        <h2>Hi, guest!</h2>
 
     {% endif %}
 
