--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,4 +1,7 @@
 {% extends "layout.html" %}
+{% block title %}
+    <title>Sign up to join the Comment maker community</title>
+{% endblock %}
 
 {% block styles %}
     <link href="{{ url_for('static', filename='./css/index.css') }}" rel="stylesheet">
@@ -9,7 +12,7 @@
 
 {% block content %}
 
-    <h1>Signup form</h1>
+    <h1>Signup form to join the comment posting community</h1>
 
     <form method="POST" action="/signup" novalidate>
         {{ form.hidden_tag() }}
