--- a/templates/index.html
+++ b/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block title %}
-    <title>Welcome to the home of the comment posting community</title>
+    <title>Comment community home page where user can register or log in </title>
 {% endblock %}
 
 {% block styles %}
@@ -12,7 +12,7 @@
 
 {% block content %}
 
-   <h1>Welcome to the comment posting community</h1>
+   <h1>The comment posting community displaying community comments and the option to register or log in</h1>
 
     {% if session_username is defined %}
 
